--- a/core-dependencies/pom.xml
+++ b/core-dependencies/pom.xml
@@ -67,6 +67,11 @@
 				<version>2.0.0.BUILD-SNAPSHOT</version>
 			</dependency>
 			<dependency>
+				<groupId>org.springframework.cloud.stream.app.micrometer</groupId>
+				<artifactId>spring-cloud-stream-starter-common-metrics-tags</artifactId>
+				<version>1.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
 				<groupId>org.springframework.cloud.stream.app</groupId>
 				<artifactId>app-starters-test-support</artifactId>
 				<version>2.0.0.BUILD-SNAPSHOT</version>
