--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-influx</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.stream.app.micrometer</groupId>
+			<artifactId>spring-cloud-stream-starter-common-metrics-tags</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-test-support</artifactId>
 			<scope>test</scope>
