--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,10 @@
 			<artifactId>micrometer-registry-influx</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-atlas</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud.stream.app.micrometer</groupId>
 			<artifactId>spring-cloud-stream-starter-common-metrics-tags</artifactId>
 		</dependency>
